samples/_failures_safe/1761468574_89f234_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0fa2b1fe.c: In function ‘next_token’:
./samples/SAFE/__tmp_0fa2b1fe.c:164:9: error: expected declaration or statement at end of input
  164 |         c = peek_char(lexer);
      |         ^
./samples/SAFE/__tmp_0fa2b1fe.c:164:9: error: expected declaration or statement at end of input
